<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="29dp" />

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="590dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.621">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textServer"
                android:layout_width="83dp"
                android:layout_height="31dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="2dp"
                android:text="@string/server"
                tools:text="Server:" />

            <EditText
                android:id="@+id/textServerInput"
                android:layout_width="264dp"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:ems="10"
                android:inputType="number|numberDecimal"
                tools:text="192.168.1.165" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/textPort"
                android:layout_width="83dp"
                android:layout_height="29dp"
                android:text="@string/port"
                tools:text="Port:" />

            <EditText
                android:id="@+id/textPortInput"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number|numberDecimal"
                tools:text="50005" />
        </TableRow>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textSampleRate"
                android:layout_width="134dp"
                android:layout_height="33dp"
                android:text="@string/sample_rate"
                app:layout_constraintEnd_toStartOf="@+id/sampleRateSpinner"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/sampleRateSpinner"
                android:layout_width="0dp"
                android:layout_height="33dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textSampleRate"
                app:layout_constraintTop_toTopOf="@+id/textSampleRate" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/start"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonStop"
                app:layout_constraintEnd_toStartOf="@+id/buttonStop"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="111dp"
                android:text="@string/stop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonStart"
                app:layout_constraintTop_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="72dp"
                android:layout_height="40dp"
                android:text="@string/status"
                app:layout_constraintEnd_toStartOf="@+id/textStatusUpdate"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="7dp" />

            <TextView
                android:id="@+id/textStatusUpdate"
                android:layout_width="189dp"
                android:layout_height="40dp"
                android:text="@string/statusNotRunning"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textStatus"
                tools:layout_editor_absoluteY="3dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>